Fixing z-index of popover to always be on top

--- a/css/grid_window.css
+++ b/css/grid_window.css
@@ -80,7 +80,7 @@ a.navbar:visited {
 	top: 10%;
 	width: 80%;
 	height: 80%;
-	z-index: 1;
+	z-index: 2;
 	box-shadow: 5px 5px 5px 5px var(--dark);
 }
 
